samples/_failures_safe/1761317228_05e1fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8338b8a.c: In function ‘main’:
./samples/SAFE/__tmp_e8338b8a.c:151:49: error: ‘MAX’ undeclared (first use in this function)
  151 |     mat2.cols = read_int("Columns (1-10): ", 1, MAX
      |                                                 ^~~
./samples/SAFE/__tmp_e8338b8a.c:151:49: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e8338b8a.c:151:52: error: expected ‘)’ at end of input
  151 |     mat2.cols = read_int("Columns (1-10): ", 1, MAX
      |                         ~                          ^
      |                                                    )
./samples/SAFE/__tmp_e8338b8a.c:151:5: error: expected declaration or statement at end of input
  151 |     mat2.cols = read_int("Columns (1-10): ", 1, MAX
      |     ^~~~
